--- a/views/index.dust
+++ b/views/index.dust
@@ -1,8 +1,13 @@
 {>layout/}
 {<content}
+	<i id="volume" class="fa volume"></i>
+	<div class="holder-audio">
+		<audio id="audio" class="audio" src="/media/zen15.mp3" loop></audio>
+	</div>
+	<div id="video" class="holder-video holder-video-1"></div>
 	<div class="stocks">
-		<div class="stocks-item stocks-item-left"></div>
-		<div class="stocks-item stocks-item-center"></div>
-		<div class="stocks-item stocks-item-right"></div>
+		{>stocks-item value="8 лет" note="За сознательность" position="left" link="https://soundcloud.com/user62248718/w1d6v63w4asg" /}
+		{>stocks-item value="10 лет" note="За регистрацию фирмы" position="center" link="http://www.youtube.com/watch?v=RvnkmPPiPWo" /}
+		{>stocks-item id="count" value=count note="Желающих пойти на Манежку" position="right" link="https://www.facebook.com/events/406603402849183/407852609390929/" /}
 	</div>
 {/content}
