--- a/views/error.dust
+++ b/views/error.dust
@@ -1,6 +1,6 @@
 {>layout/}
 {<content}
+<div class="stocks">
 	<h1>{message}</h1>
-	<h2>{error.status}</h2>
-	<p>{error.stack}</p>
+</div>
 {/content}
