update error page

--- a/less/style.less
+++ b/less/style.less
@@ -30,6 +30,12 @@ a {
 }
 
 .error {
+	position: absolute;
+	top: 30%;
+	width: 100%;
+	height: 50px;
+
+	font-size: 30px;
 	text-align: center;
 }
 
