--- a/less/style.less
+++ b/less/style.less
@@ -155,6 +155,22 @@ a {
 
 	transition: margin 0.5s;
 
+	&-mantra {
+		position: absolute;
+		top: 100px;
+
+		box-sizing: border-box;
+		display: block;
+		width: 100%;
+		height: 50px;
+
+		padding: 0 50px;
+
+		font-size: 18px;
+		text-align: center;
+		text-shadow: 0 0 3px #666;
+	}
+
 	&-item {
 		box-sizing: border-box;
 		display: inline-block;
