--- a/views/layout.dust
+++ b/views/layout.dust
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Zen15 / Zen Navalny</title>
+	<title>Жизнь слишком коротка, чтобы всё время смотреть в стол</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
 	<link rel="stylesheet" href="/css/style.css" />
