--- a/less/style.less
+++ b/less/style.less
@@ -137,6 +137,21 @@ a {
 		&-5 {
 			background-image: url('/i/bg/5.jpg');
 		}
+		&-6 {
+			background-image: url('/i/bg/6.jpg');
+		}
+		&-7 {
+			background-image: url('/i/bg/7.jpg');
+		}
+		&-8 {
+			background-image: url('/i/bg/8.jpg');
+		}
+		&-9 {
+			background-image: url('/i/bg/9.jpg');
+		}
+		&-10 {
+			background-image: url('/i/bg/10.jpg');
+		}
 	}
 	&-audio {
 		z-index: -2;
