--- a/less/style.less
+++ b/less/style.less
@@ -155,6 +155,15 @@ a {
 		&-10 {
 			background-image: url('/i/bg/10.jpg');
 		}
+		&-11 {
+			background-image: url('/i/bg/11.jpg');
+		}
+		&-12 {
+			background-image: url('/i/bg/12.jpg');
+		}
+		&-13 {
+			background-image: url('/i/bg/13.jpg');
+		}
 	}
 	&-audio {
 		z-index: -2;
