--- a/views/layout.dust
+++ b/views/layout.dust
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="Description" content="Жизнь слишком коротка, чтобы всё время смотреть в стол">
+	<meta name="Keywords" content="навальный, navalny, 15 января, 15 january, 15.1.15, 15.01.15, народный сход, манежка, россия, russia, manezhka">
 	<title>Жизнь слишком коротка, чтобы всё время смотреть в стол</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
