--- a/less/style.less
+++ b/less/style.less
@@ -65,13 +65,26 @@ a {
 	text-rendering: auto;
 }
 
-.volume {
+.setup {
 	position: absolute;
-	top: 30px;
-	right: 70px;
+	top: 20px;
+	right: 30px;
 	z-index: 10;
 
 	display: block;
+	white-space: nowrap;
+
+	&-item {
+		display: inline-block;
+		vertical-align: middle;
+		padding: 0 10px;
+	}
+}
+
+.volume {
+	position: relative;
+
+	display: inline-block;
 	width: 1em;
 
 	color: @textColor;
@@ -282,4 +295,83 @@ a {
 
 .footer {
 	bottom: 0;
+}
+
+.pluso-engine {
+	display: inline-block;
+}
+
+.switch {
+	display: inline-block;
+	margin: 0 10px;
+	vertical-align: middle;
+
+	&-label {
+		display: inline-block;
+		vertical-align: middle;
+		opacity: 0.6;
+
+		cursor: pointer;
+
+		transition: opacity 0.5s;
+
+		&-selected {
+			opacity: 1;
+		}
+	}
+}
+
+.cmn-toggle {
+	position: absolute;
+	margin-left: -9999px;
+	visibility: hidden;
+}
+.cmn-toggle + label {
+	display: block;
+	position: relative;
+	cursor: pointer;
+	outline: none;
+	user-select: none;
+}
+
+input.cmn-toggle-round-flat {
+	@size: 30px;
+	&+label {
+		padding: 2px;
+		width: @size * 2;
+		height: @size;
+		background-color: rgba(0, 0, 0, 0.3);
+		border-radius: @size;
+		transition: background 0.4s;
+
+		&:before,
+		&:after {
+			display: block;
+			position: absolute;
+			content: "";
+		}
+		&:before {
+			top: 2px;
+			left: 2px;
+			bottom: 2px;
+			right: 2px;
+			background-color: rgba(100, 100, 100, 0.4);
+			border-radius: @size;
+			transition: background 0.4s;
+		}
+		&:after {
+			top: 6px;
+			left: 4px;
+			bottom: 6px;
+			width: @size - 8px;
+			background-color: rgba(0, 0, 0, 0.3);
+			border-radius: @size - 8px;
+			transition: margin 0.4s, background 0.4s;
+		}
+	}
+	&:checked+label {
+		&:after {
+			margin-left: @size;
+		}
+	}
 }
