--- a/views/index.dust
+++ b/views/index.dust
@@ -1,8 +1,21 @@
 {>layout/}
 {<content}
-	<i id="volume" class="fa volume"></i>
+	<div class="setup">
+		<div class="setup-item">
+			<div id="zenLabel" class="switch-label">Zen</div>
+			<div class="switch">
+				<input id="zen_switch" class="cmn-toggle cmn-toggle-round-flat" type="checkbox" />
+				<label for="zen_switch"></label>
+			</div>
+			<div id="driveLabel" class="switch-label">Drive</div>
+		</div>
+		<div class="setup-item">
+			<i id="volume" class="fa volume"></i>
+		</div>
+	</div>
 	<div class="holder-audio">
-		<audio id="audio" class="audio" src="/media/zen15.mp3" loop></audio>
+		<audio id="audio_zen" class="audio" src="/media/zen15.mp3" loop></audio>
+		<audio id="audio_drive" class="audio" src="/media/drive.mp3" loop></audio>
 	</div>
 	<div id="video" class="holder-video holder-video-1"></div>
 	{?message}
