--- a/views/layout.dust
+++ b/views/layout.dust
@@ -7,9 +7,9 @@
 	<title>Жизнь слишком коротка, чтобы всё время смотреть в стол</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
-	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="/css/style.css?v=2" />
 	<script type="text/javascript" src="//yastatic.net/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/zen.js"></script>
+	<script type="text/javascript" src="/js/zen.js?v=2"></script>
 </head>
 <body>
 	<div class="holder">
