--- a/less/style.less
+++ b/less/style.less
@@ -299,6 +299,13 @@ a {
 
 .pluso-engine {
 	display: inline-block;
+	opacity: 0.8;
+
+	transition: opacity 0.5s;
+
+	&:hover {
+		opacity: 1;
+	}
 }
 
 .switch {
