--- a/less/style.less
+++ b/less/style.less
@@ -241,14 +241,17 @@ a {
 			display: block;
 			text-shadow: 0 0 3px #666;
 			text-decoration: none;
-			cursor: pointer;
 
-			transition: all 0.5s;
+			a& {
+				cursor: pointer;
 
-			opacity: 0.8;
-			&:hover {
-				text-decoration: none;
-				opacity: 1;
+				transition: all 0.5s;
+
+				opacity: 0.8;
+				&:hover {
+					text-decoration: none;
+					opacity: 1;
+				}
 			}
 		}
 	}
