--- a/views/meta.dust
+++ b/views/meta.dust
@@ -1,7 +1,7 @@
 <meta name="Description" content="Жизнь слишком коротка, чтобы всё время смотреть в стол">
 <meta name="Keywords" content="навальный, navalny, 15 января, 15 january, 15.1.15, 15.01.15, народный сход, манежка, россия, russia, manezhka">
 <meta content="Zen 15.1.15" property="og:site_name">
-<meta content="Zen 15.1.15" name="twitter:title">
+<meta content="Zen 15.1.15" name="og:title">
 <meta content="https://zen15.me/i/share.jpg" property="og:image">
 <meta content="website" property="og:type">
 <meta content="https://zen15.me" property="og:url">
