--- a/less/style.less
+++ b/less/style.less
@@ -352,7 +352,7 @@ input.cmn-toggle-round-flat {
 		height: @size;
 		background-color: rgba(0, 0, 0, 0.3);
 		border-radius: @size;
-		transition: background 0.4s;
+		transition: background 0.4s, margin 0.4s;
 
 		&:before,
 		&:after {
