--- a/views/layout.dust
+++ b/views/layout.dust
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	{>meta/}
+	<link rel="icon" type="image/png" href="/favicon.png" />
+	<link rel="apple-touch-icon" href="/favicon-touch.png"/>
 	<title>Жизнь слишком коротка, чтобы всё время смотреть в стол</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
