--- a/less/style.less
+++ b/less/style.less
@@ -300,6 +300,12 @@ a {
 	bottom: 0;
 }
 
+.copyleft {
+	position: absolute;
+	left: 30px;
+	bottom: 20px;
+}
+
 .pluso-engine {
 	display: inline-block;
 	opacity: 0.8;
