--- a/less/style.less
+++ b/less/style.less
@@ -104,6 +104,37 @@ a {
 	}
 }
 
+.bg-animate() {
+	from {
+		-webkit-transform: translate(30%, 30%) scale(2);
+		-moz-transform: translate(30%, 30%) scale(2);
+		transform: translate(30%, 30%) scale(2);
+	}
+	to {
+		-webkit-transform: translate(0, 0) scale(1);
+		-moz-transform: translate(0, 0) scale(1);
+		transform: translate(0, 0) scale(1);
+	}
+}
+.bg-animate-back() {
+	from {
+		-webkit-transform: translate(-30%, -30%) scale(2);
+		-moz-transform: translate(-30%, -30%) scale(2);
+		transform: translate(-30%, -30%) scale(2);
+	}
+	to {
+		-webkit-transform: translate(0, 0) scale(1);
+		-moz-transform: translate(0, 0) scale(1);
+		transform: translate(0, 0) scale(1);
+	}
+}
+@-webkit-keyframes bg_move { .bg-animate; }
+@-moz-keyframes bg_move { .bg-animate; }
+@keyframes bg_move { .bg-animate; }
+@-webkit-keyframes bg_move_back { .bg-animate-back; }
+@-moz-keyframes bg_move_back { .bg-animate-back; }
+@keyframes bg_move_back { .bg-animate-back; }
+
 .holder {
 	position: relative;
 
@@ -113,6 +144,8 @@ a {
 
 	margin: 0;
 	padding: 0;
+
+	overflow: hidden;
 
 	&-video,
 	&-audio {
@@ -182,6 +215,16 @@ a {
 	&-audio {
 		z-index: -2;
 	}
+	&-video {
+		-webkit-animation: bg_move 30s linear;
+		-moz-animation: bg_move 30s linear;
+		animation: bg_move 30s linear;
+	}
+	&-video-invert {
+		-webkit-animation: bg_move_back 30s linear;
+		-moz-animation: bg_move_back 30s linear;
+		animation: bg_move_back 30s linear;
+	}
 }
 
 .stocks {
@@ -217,6 +260,7 @@ a {
 		display: inline-block;
 		width: 33%;
 
+		vertical-align: top;
 		text-align: center;
 
 		&-value {
