--- a/views/index.dust
+++ b/views/index.dust
@@ -25,7 +25,7 @@
 		Власть должна быть для людей, а там, где это возможно, то есть практически везде, сами люди и должны быть властью.
 	</div>
 	<div class="stocks">
-		{>stocks-item value="10" note="Лет за регистрацию фирмы" position="left" link="http://www.youtube.com/watch?v=RvnkmPPiPWo" /}
+		{>stocks-item value="10" note="Лет за борьбу с коррупцией" position="left" link="http://www.youtube.com/watch?v=RvnkmPPiPWo" /}
 		{>stocks-item id="count" value=count note="Желающих пойти на Манежку" position="center" link="https://www.facebook.com/events/406603402849183/407852609390929/" /}
 		{>stocks-item id="date" value="0" note="Минут, чтобы рассказать всем" position="right" /}
 	</div>
