--- a/less/style.less
+++ b/less/style.less
@@ -223,6 +223,9 @@ a:not(.stocks-item) {
 		&-13 {
 			background-image: url('/i/bg/13.jpg');
 		}
+		&-14 {
+			background-image: url('/i/bg/14.png');
+		}
 		&-hidden {
 			opacity: 0;
 		}
