--- a/views/layout-min.dust
+++ b/views/layout-min.dust
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
-	<link rel="stylesheet" href="/css/style.css?v=13" />
+	<link rel="stylesheet" href="/css/banner.css?v=13" />
 	<script type="text/javascript" src="//yastatic.net/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/bn.js?v=13"></script>
 </head>
-<body>
-	<<a class="holder" href="https://www.facebook.com/events/406603402849183/407852609390929">
+<body class="banner">
+	<a class="holder" href="https://www.facebook.com/events/406603402849183/407852609390929" target="_blank">
 		{+content/}
 	</a>
 	{>ga/}
