--- a/less/style.less
+++ b/less/style.less
@@ -195,6 +195,24 @@ a:not(.stocks-item) {
 	}
 }
 
+.stocks {
+	&-mantra {
+		position: absolute;
+		top: 100px;
+
+		box-sizing: border-box;
+		display: block;
+		width: 100%;
+		height: 50px;
+
+		padding: 0 50px;
+
+		font-size: 18px;
+		text-align: center;
+		text-shadow: 0 0 3px #666;
+	}
+}
+
 .footer,
 .header {
 	position: absolute;
