--- a/views/banner-small.dust
+++ b/views/banner-small.dust
@@ -1,9 +1,7 @@
 {>layout-min/}
 {<content}
-	<span class="stocks stocks-banner">
-		<span id="mantra" class="stocks-mantra"></span>
+	<span class="stocks stocks-banner stocks-banner-small">
 		{>stocks-item id="navalny" value="10" note="Лет за борьбу с коррупцией" position="left" /}
-		{>stocks-item id="sechin" hidden="1" value="0" note="Столько рублей получил Сечин с момента вашего захода на сайт" position="left" /}
 		{>stocks-item id="count" value=count note="Желающих пойти на Манежку" position="center" /}
 		{>stocks-item id="date" value="0" note="Минут, чтобы рассказать всем" position="right" /}
 	</span>
