add banners page

--- a/views/banners.dust
+++ b/views/banners.dust
@@ -31,8 +31,20 @@
 		&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zen15.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 	</p>
 
+	<h2>Маленький баннер 2</h2>
+	<iframe style="display:block;margin:0 auto;width:480px;height:100px;" src="https://banner.zen15.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+	<p>
+		&lt;iframe style=&quot;display:block;margin:0 auto;width:480px;height:100px;&quot; src=&quot;https://banner.zen15.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+	</p>
+
+	<h2>Маленький баннер 3</h2>
+	<iframe style="display:block;margin:0 auto;width:520px;height:83px;" src="https://banner.zen15.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+	<p>
+		&lt;iframe style=&quot;display:block;margin:0 auto;width:520px;height:83px;&quot; src=&quot;https://banner.zen15.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+	</p>
+
 	<h2>Мантра</h2>
-	<iframe style="display:block;margin:0 auto;width:600px;height:100px;" src="https://banner.zen15.tk/mantra" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+	<iframe style="display:block;margin:0 auto;width:600px;height:65px;" src="https://banner.zen15.tk/mantra" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 	<p>
 		&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zen15.tk/mantra&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 	</p>
