add white banners

--- a/less/banner.less
+++ b/less/banner.less
@@ -1,5 +1,4 @@
 @textColor: #fff;
-@linkColor: #00B7FF;
 @backgroundColor: #000;
 
 @fontNormal: 16px;
@@ -149,6 +148,17 @@ a {
 				font-size: 18px;
 				text-align: center;
 				text-shadow: 0 0 3px #333;
+			}
+		}
+		body.banner-white & {
+			color: #333;
+
+			&-note {
+				text-shadow: 0 0 3px #ccc;
+			}
+
+			&-mantra {
+				text-shadow: 0 0 3px #ccc;
 			}
 		}
 	}
