--- a/less/style.less
+++ b/less/style.less
@@ -134,7 +134,9 @@ a:not(.stocks-item) {
 
 		transition: opacity 3s linear;
 		opacity: 0.9;
+	}
 
+	&-video {
 		&-1 {
 			background-image: url('/i/bg/1.jpg');
 		}
@@ -177,6 +179,56 @@ a:not(.stocks-item) {
 		}
 		&-14 {
 			background-image: url('/i/bg/14.png');
+		}
+
+
+		&-vesna-1 {
+			background-image: url('/i/bg/vesna/01.jpg');
+		}
+		&-vesna-2 {
+			background-image: url('/i/bg/vesna/02.jpg');
+		}
+		&-vesna-3 {
+			background-image: url('/i/bg/vesna/03.jpg');
+		}
+		&-vesna-4 {
+			background-image: url('/i/bg/vesna/04.jpg');
+		}
+		&-vesna-5 {
+			background-image: url('/i/bg/vesna/05.jpg');
+		}
+		&-vesna-6 {
+			background-image: url('/i/bg/vesna/06.jpg');
+		}
+		&-vesna-7 {
+			background-image: url('/i/bg/vesna/07.jpg');
+		}
+		&-vesna-8 {
+			background-image: url('/i/bg/vesna/08.jpg');
+		}
+		&-vesna-9 {
+			background-image: url('/i/bg/vesna/09.jpg');
+		}
+		&-vesna-10 {
+			background-image: url('/i/bg/vesna/10.jpg');
+		}
+		&-vesna-11 {
+			background-image: url('/i/bg/vesna/11.jpg');
+		}
+		&-vesna-12 {
+			background-image: url('/i/bg/vesna/12.jpg');
+		}
+		&-vesna-13 {
+			background-image: url('/i/bg/vesna/13.jpg');
+		}
+		&-vesna-14 {
+			background-image: url('/i/bg/vesna/14.jpg');
+		}
+		&-vesna-15 {
+			background-image: url('/i/bg/vesna/15.jpg');
+		}
+		&-vesna-16 {
+			background-image: url('/i/bg/vesna/16.jpg');
 		}
 		&-hidden {
 			opacity: 0;
