--- a/views/banners.dust
+++ b/views/banners.dust
@@ -5,7 +5,7 @@
 	{>meta/}
 	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="apple-touch-icon" href="/favicon-touch.png"/>
-	<title>Жизнь слишком коротка, чтобы всё время смотреть в стол</title>
+	<title>Весна скоро</title>
 	<style type="text/css">
 		body {
 			background: #333;
