--- a/views/layout.dust
+++ b/views/layout.dust
@@ -8,15 +8,15 @@
 	<title>Жизнь слишком коротка, чтобы всё время смотреть в стол</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
-	<link rel="stylesheet" href="/css/style.css?v=15" />
+	<link rel="stylesheet" href="/css/style.css?v=17" />
 	<script type="text/javascript" src="//yastatic.net/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/zen.js?v=15"></script>
+	<script type="text/javascript" src="/js/zen.js?v=16"></script>
 </head>
 <body>
 	<div class="holder">
 		<div class="header">
-			<a class="header-link" href="https://www.facebook.com/events/406603402849183/407852609390929">
-				15.1.15
+			<a class="header-link" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D1%81%D0%BD%D0%B0">
+				1 марта 2015
 			</a>
 		</div>
 		{+content/}
