update vesna meta

--- a/views/meta.dust
+++ b/views/meta.dust
@@ -1,14 +1,14 @@
-<meta name="Description" content="Жизнь слишком коротка, чтобы всё время смотреть в стол">
-<meta name="Keywords" content="навальный, navalny, 15 января, 15 january, 15.1.15, 15.01.15, народный сход, манежка, россия, russia, manezhka">
-<meta content="Zen 15.1.15" property="og:site_name">
-<meta content="Zen 15.1.15" name="og:title">
-<meta content="https://zen15.me/i/share.jpg" property="og:image">
+<meta name="Description" content="Скоро весна!">
+<meta name="Keywords" content="весна, vesna, spring, навальный, navalny, 1 марта, 1 march, 1.3.15, 1.3.15, народный сход, манежка, россия, russia, manezhka">
+<meta content="Zen Vesna" property="og:site_name">
+<meta content="Zen Vesna" name="og:title">
+<meta content="https://www.zenvesna.tk/i/share.jpg" property="og:image">
 <meta content="website" property="og:type">
-<meta content="https://zen15.me" property="og:url">
+<meta content="https://www.zenvesna.tk" property="og:url">
 <meta content="Жизнь слишком коротка, чтобы всё время смотреть в стол." name="og:description">
 <meta content="summary_large_image" name="twitter:card">
 <meta content="@the_outreach" name="twitter:creator">
-<meta content="Zen 15.1.15" name="twitter:title">
+<meta content="Zen Vesna" name="twitter:title">
 <meta content="Жизнь слишком коротка, чтобы всё время смотреть в стол." name="twitter:description">
-<meta content="https://zen15.me/i/share.jpg" name="twitter:image:src">
-<meta content="zen15.me" name="twitter:domain">
+<meta content="https://www.zenvesna.tk/i/share.jpg" name="twitter:image:src">
+<meta content="www.zenvesna.tk" name="twitter:domain">
