update banners page

--- a/views/banners.dust
+++ b/views/banners.dust
@@ -38,64 +38,64 @@
 			Также, можно задавать любой фон баннеру, добавит параметр <i>background: #123456;</i> в аттрибут "style";
 		</p>
 		<h2>Большой баннер</h2>
-		<iframe style="display:block;margin:0 auto;width:800px;height:176px;" src="https://banner.zen15.tk/banner" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:800px;height:176px;" src="https://banner.zenvesna.tk/banner" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:800px;height:176px;&quot; src=&quot;https://banner.zen15.tk/banner&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:800px;height:176px;&quot; src=&quot;https://banner.zenvesna.tk/banner&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Маленький баннер</h2>
-		<iframe style="display:block;margin:0 auto;width:600px;height:100px;" src="https://banner.zen15.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:600px;height:100px;" src="https://banner.zenvesna.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zen15.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zenvesna.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Маленький баннер 2</h2>
-		<iframe style="display:block;margin:0 auto;width:480px;height:100px;" src="https://banner.zen15.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:480px;height:100px;" src="https://banner.zenvesna.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:480px;height:100px;&quot; src=&quot;https://banner.zen15.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:480px;height:100px;&quot; src=&quot;https://banner.zenvesna.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Маленький баннер 3</h2>
-		<iframe style="display:block;margin:0 auto;width:520px;height:83px;" src="https://banner.zen15.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:520px;height:83px;" src="https://banner.zenvesna.tk/banner-small" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:520px;height:83px;&quot; src=&quot;https://banner.zen15.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:520px;height:83px;&quot; src=&quot;https://banner.zenvesna.tk/banner-small&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Мантра</h2>
-		<iframe style="display:block;margin:0 auto;width:600px;height:65px;" src="https://banner.zen15.tk/mantra" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:600px;height:65px;" src="https://banner.zenvesna.tk/mantra" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zen15.tk/mantra&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zenvesna.tk/mantra&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 	</div>
 	<div class="white">
 		<h2>Большой баннер</h2>
-		<iframe style="display:block;margin:0 auto;width:800px;height:176px;" src="https://banner.zen15.tk/banner?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:800px;height:176px;" src="https://banner.zenvesna.tk/banner?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:800px;height:176px;&quot; src=&quot;https://banner.zen15.tk/banner?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:800px;height:176px;&quot; src=&quot;https://banner.zenvesna.tk/banner?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Маленький баннер</h2>
-		<iframe style="display:block;margin:0 auto;width:600px;height:100px;" src="https://banner.zen15.tk/banner-small?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:600px;height:100px;" src="https://banner.zenvesna.tk/banner-small?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zen15.tk/banner-small?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zenvesna.tk/banner-small?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Маленький баннер 2</h2>
-		<iframe style="display:block;margin:0 auto;width:480px;height:100px;" src="https://banner.zen15.tk/banner-small?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:480px;height:100px;" src="https://banner.zenvesna.tk/banner-small?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:480px;height:100px;&quot; src=&quot;https://banner.zen15.tk/banner-small?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:480px;height:100px;&quot; src=&quot;https://banner.zenvesna.tk/banner-small?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Маленький баннер 3</h2>
-		<iframe style="display:block;margin:0 auto;width:520px;height:83px;" src="https://banner.zen15.tk/banner-small?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:520px;height:83px;" src="https://banner.zenvesna.tk/banner-small?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:520px;height:83px;&quot; src=&quot;https://banner.zen15.tk/banner-small?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:520px;height:83px;&quot; src=&quot;https://banner.zenvesna.tk/banner-small?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 
 		<h2>Мантра</h2>
-		<iframe style="display:block;margin:0 auto;width:600px;height:65px;" src="https://banner.zen15.tk/mantra?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
+		<iframe style="display:block;margin:0 auto;width:600px;height:65px;" src="https://banner.zenvesna.tk/mantra?white=1" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 		<p>
-			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zen15.tk/mantra?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+			&lt;iframe style=&quot;display:block;margin:0 auto;width:600px;height:100px;&quot; src=&quot;https://banner.zenvesna.tk/mantra?white=1&quot; allowTransparency=&quot;true&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
 		</p>
 	</div>
 	{>ga/}
