--- a/views/footer.dust
+++ b/views/footer.dust
@@ -1,6 +1,6 @@
 <div class="footer">
 	<div>
-		<a class="footer-link" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D1%81%D0%BD%D0%B0">
+		<a class="footer-link" href="https://navalny.com/p/4089/">
 			Я тоже пойду
 		</a>
 	</div>
