--- a/views/layout.dust
+++ b/views/layout.dust
@@ -5,12 +5,12 @@
 	{>meta/}
 	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="apple-touch-icon" href="/favicon-touch.png"/>
-	<title>Жизнь слишком коротка, чтобы всё время смотреть в стол</title>
+	<title>Антикризисный марш «Весна»</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
-	<link rel="stylesheet" href="/css/style.css?v=17" />
+	<link rel="stylesheet" href="/css/style.css?v=vesna.1" />
 	<script type="text/javascript" src="//yastatic.net/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/zen.js?v=16"></script>
+	<script type="text/javascript" src="/js/zen.js?v=vesna.1"></script>
 </head>
 <body>
 	<div class="holder">
