--- a/views/banner-small.dust
+++ b/views/banner-small.dust
@@ -3,7 +3,7 @@
 	<span class="stocks stocks-banner stocks-banner-small">
 		{>stocks-item id="navalny" value="10" note="Лет за борьбу с коррупцией" position="left" /}
 		{!>stocks-item id="count" value=count note="Ожидающих весну" position="center" /!}
-		{>stocks-item id="vesna" value="Весна!" note="" position="center" link="https://navalny.com/p/4089/" /}
+		{>stocks-item id="vesna" value="Весна!" note="" position="center" /}
 		{>stocks-item id="date" value="0" note="Минут до начала весны" position="right" /}
 	</span>
 {/content}
