add vesna counter

--- a/views/footer.dust
+++ b/views/footer.dust
@@ -1,6 +1,6 @@
 <div class="footer">
 	<div>
-		<a class="footer-link" href="https://navalny.com/p/4089/">
+		<a class="footer-link" href="https://www.facebook.com/events/1601494796751001/">
 			Я тоже пойду
 		</a>
 	</div>
