--- a/views/banner-small.dust
+++ b/views/banner-small.dust
@@ -2,8 +2,8 @@
 {<content}
 	<span class="stocks stocks-banner stocks-banner-small">
 		{>stocks-item id="navalny" value="10" note="Лет за борьбу с коррупцией" position="left" /}
-		{!>stocks-item id="count" value=count note="Ожидающих весну" position="center" /!}
-		{>stocks-item id="vesna" value="Весна!" note="" position="center" /}
+		{>stocks-item id="count" value=count note="Встречающих Весну" position="center" /}
+		{!>stocks-item id="vesna" value="Весна!" note="" position="center" /!}
 		{>stocks-item id="date" value="0" note="Минут до начала весны" position="right" /}
 	</span>
 {/content}
