--- a/views/layout.dust
+++ b/views/layout.dust
@@ -15,7 +15,7 @@
 <body>
 	<div class="holder">
 		<div class="header">
-			<a class="header-link" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D1%81%D0%BD%D0%B0">
+			<a class="header-link" href="https://navalny.com/p/4089/">
 				1 марта 2015
 			</a>
 		</div>
